# ml43dg-3dr2n2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  train.py
src/callbacks/: __init__.py  log_meshes.py  log_model.py  random_views_num.py
src/configuration/: config.py  train.ini
src/data/: shapenet.py
src/model/: convRNN3D.py  decoder.py  encoder.py  layers.py  loss.py  test_3dr2n2.py  test_decoder.py  test_encoder.py  threedr2n2.py  utils.py
src/scripts/: scan_dataset.py
src/utils/: grid.py  scan_obj.py
src/utils/visualization/: __init__.py  color.py  mesh.py
